<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_release" tools:ignore="UnusedResources">GoCards</string>
    <string name="app_name_debug" tools:ignore="UnusedResources">GoCards (DEV)</string>
    <string name="title_filesync" tools:keep="@string/title_filesync">File Sync</string>
    <string name="title_filesync_sheet" tools:keep="@string/title_filesync_sheet">FileSync Sheet</string>
    <string name="title_filesync_excel" tools:keep="@string/title_filesync_excel">FileSync Sheet Excel</string>
    <string name="title_ai_chat" tools:keep="@string/title_ai_chat">AI Chat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="neww">New</string>
    <string name="search">Search</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="restore">Restore</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="off" tools:ignore="PrivateResource">Off</string>
    <string name="on" tools:ignore="PrivateResource">On</string>
    <string name="more">More</string>
    <string name="login">Login</string>
    <string name="discord">Discord</string>
    <string name="facebook">Facebook</string>
    <string name="fanpage">Fanpage</string>
    <string name="youtube">YouTube</string>
    <string name="bottom_nav_menu_bottom_recent">Recent</string>
    <string name="bottom_nav_menu_all_decks">All decks</string>
    <string name="bottom_nav_menu_explore">Explore</string>
    <string name="bottom_nav_menu_discover">Discover</string>
    <string name="home_whats_new_dialog_title">New in Version 1.0.33:\nAI Chat!</string>
    <string name="home_whats_new_dialog_message"><![CDATA[Meet your AI tutor!\nOpen the cards list and tap the AI button to:\n\n✨ Generate flashcards on any topic\n📝 Review and improve existing cards\n🗑️ Update or delete cards by chat\n\nTwo ways to use it:\n• Buy tokens in the app\n• Bring your own OpenAI API key (Settings)\n\nIf AI assistance doesn\'t reply well for you, contact us on socials. We\'re continuously adjusting it to give you better answers.]]></string>
    <string name="no_decks_recently_used">No decks recently used.</string>
    <string name="no_decks_in_folder">No decks in this folder.</string>
    <string name="no_decks_create_sample_deck_button">Sample deck</string>
    <string name="no_decks_import_file">Import Excel/CSV</string>
    <string name="decks_list_no_more_cards_repeat">No cards to repeat</string>
    <string name="decks_list_create_deck_deck_name">Deck name</string>
    <string name="decks_list_create_folder_folder_name">Folder name</string>
    <string name="decks_list_root_path">This device</string>
    <string name="decks_list_deck_icon">Deck icon</string>
    <string name="decks_list_folder_icon">Folder icon</string>
    <string name="decks_list_total">Total: %d</string>
    <string name="decks_list_total_zero">Total: 0</string>
    <string name="decks_list_new">New: %d</string>
    <string name="decks_list_new_zero">New: 0</string>
    <string name="decks_list_review">Rev: %d</string>
    <string name="decks_list_review_zero">Rev: 0</string>
    <string name="decks_list_menu_new_deck">New deck</string>
    <string name="decks_list_menu_new_folder">New folder</string>
    <string name="decks_list_menu_import_excel">Import Excel</string>
    <string name="decks_list_menu_import_csv">Import CSV</string>
    <string name="decks_list_menu_import_db">Import DB</string>
    <string name="decks_list_menu_log_out">Log out</string>
    <string name="decks_list_menu_app_settings">Settings</string>
    <string name="decks_list_paste_folder_here">Paste the folder here</string>
    <string name="decks_list_paste_folder_toast_merged">\"%s\" has been merged with another folder.</string>
    <string name="decks_list_paste_folder_toast_moved">"\"%s\" has been moved.</string>
    <string name="decks_list_paste_deck_here">Paste the deck here</string>
    <string name="decks_list_paste_deck_toast">\"%s\" has been moved.</string>
    <string name="decks_list_deck_create_dialog_title">Create a new deck</string>
    <string name="decks_list_deck_create_dialog_message">Please enter the name:</string>
    <string name="decks_list_deck_create_dialog_toast_created">\"%s\" deck created.</string>
    <string name="decks_list_deck_create_dialog_toast_exists">\"%s\" deck already exists.</string>
    <string name="decks_list_deck_delete_dialog_title">Delete the deck of cards</string>
    <string name="decks_list_deck_delete_dialog_message">Are you sure you want to delete the deck with all cards?</string>
    <string name="decks_list_deck_delete_dialog_toast">The deck has been deleted.</string>
    <string name="decks_list_deck_rename_dialog_title">Rename the deck</string>
    <string name="decks_list_deck_rename_dialog_message">Please enter a new name:</string>
    <string name="decks_list_deck_rename_dialog_toast_renamed">The deck has been renamed to \"%s\".</string>
    <string name="decks_list_deck_rename_dialog_toast_exists">\"%s\ deck already exists.</string>
    <string name="decks_list_folder_create_dialog_title">Create a new folder</string>
    <string name="decks_list_folder_create_dialog_message">Please enter the name:</string>
    <string name="decks_list_folder_create_dialog_toast_created">\"%s\" folder created.</string>
    <string name="decks_list_folder_create_dialog_toast_exists">\"%s\" folder already exists.</string>
    <string name="decks_list_folder_delete_dialog_title">Remove the deck of cards</string>
    <string name="decks_list_folder_delete_dialog_message">Are you sure you want to delete the folder with all decks?</string>
    <string name="decks_list_folder_delete_dialog_toast_deleted">The folder has been deleted.</string>
    <string name="decks_list_folder_rename_dialog_title">Rename the folder</string>
    <string name="decks_list_folder_rename_dialog_message">Please enter a new name:</string>
    <string name="decks_list_folder_rename_dialog_toast_merged">\"%s\" has been merged with another folder.</string>
    <string name="decks_list_folder_rename_dialog_toast_renamed">The folder has been renamed to \"%s\".</string>
    <string name="decks_list_export_db_toast">\"%s\" db exported.</string>
    <string name="decks_list_import_db_toast">\"%s\" db imported.</string>
    <string name="cards_list_table_header_id">#</string>
    <string name="cards_list_table_header_term">Term</string>
    <string name="cards_list_table_header_definition">Definition</string>
    <string name="cards_list_editing_locked">Editing is locked. Sync in progress…</string>
    <string name="cards_list_cards_selected" tools:ignore="PluralsCandidate">%d selected</string>
    <string name="cards_list_menu_delete_cards">Delete cards</string>
    <string name="cards_list_menu_new_card">New card</string>
    <string name="cards_list_menu_deck_settings">Settings</string>
    <string name="cards_list_menu_sync">Sync with Excel/CSV</string>
    <string name="cards_list_menu_export_excel">Export to new Excel</string>
    <string name="cards_list_menu_export_csv">Export to new CSV</string>
    <string name="decks_list_popup_deck_desc">Pop-up menu for the deck.</string>
    <string name="decks_list_popup_deck_browse_cards">Browse</string>
    <string name="decks_list_popup_deck_list_cards">List cards</string>
    <string name="decks_list_popup_deck_add_card">Add a new card</string>
    <string name="decks_list_popup_folder_desc">Pop-up menu for the folder.</string>
    <string name="decks_list_menu_bottom_export_db">Export DB</string>
    <string name="decks_list_menu_bottom_deck_settings">Deck Settings</string>
    <string name="cards_list_popup_select_card">Select / Cut</string>
    <string name="cards_list_popup_add_card_here">Add a new card here</string>
    <string name="cards_list_popup_select_mode_select_card">Select</string>
    <string name="cards_list_popup_select_mode_unselect_card">Unselect</string>
    <string name="cards_list_popup_select_mode_delete_selected_cards">Delete selected</string>
    <string name="cards_list_popup_select_mode_paste_card_before">Paste before</string>
    <string name="cards_list_popup_select_mode_paste_card_after">Paste after</string>
    <string name="cards_list_toast_single_tap">Single tap to select.</string>
    <string name="cards_list_toast_long_press">Long press to display a pop-up menu.</string>
    <string name="cards_list_toast_deleted_card">The card has been deleted.</string>
    <string name="cards_list_toast_deleted_cards">The cards has been deleted.</string>
    <string name="cards_list_toast_restore_card">The card has been restored.</string>
    <string name="cards_list_toast_restore_cards">The cards has been restored.</string>
    <string name="cards_slider_new_card">New card</string>
    <string name="card_study_show_definition">\?\nShow definition</string>
    <string name="card_study_again">Again</string>
    <string name="card_study_quick_repetition_min">Quick Repetition\n %d min</string>
    <string name="card_study_quick_repetition_hours">Quick Repetition\n %.1f hours</string>
    <string name="card_study_easy_min">Easy\n %d min</string>
    <string name="card_study_easy_hours">Easy\n %.1f hours</string>
    <string name="card_study_easy_day">Easy\n %.1f day</string>
    <string name="card_study_easy_day_only_again">Easy\n %.1f</string>
    <string name="card_study_easy_days">Easy\n %.1f days</string>
    <string name="card_study_hard_min">Hard\n %d min</string>
    <string name="card_study_hard_hours">Hard\n %.1f hours</string>
    <string name="card_study_hard_day">Hard\n %.1f day</string>
    <string name="card_study_hard_day_only_again">Hard\n %.1f</string>
    <string name="card_study_hard_days">Hard\n %.1f days</string>
    <string name="card_study_menu_reset_view">Reset view</string>
    <string name="card_study_no_more_cards_repeat">No more cards to repeat</string>
    <string name="card_study_limit_forgotten_cards_exceeded_toast">Forgotten %d card limit reached. Back to the first card.</string>
    <string name="card_new_title">Add a new card</string>
    <string name="card_new_term_label">Term:</string>
    <string name="card_new_definition_label">Definition:</string>
    <string name="card_new_disabled_label">Disabled</string>
    <string name="card_edit_title">Edit the card</string>
    <string name="card_edit_card_added_toast">"The new card has been added.</string>
    <string name="card_edit_next_replay_at_label">The next replay at:</string>
    <string name="card_edit_card_updated_toast">The card has been updated.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_this_deck">This deck</string>
    <string name="settings_all_decks">All decks</string>
    <string name="settings_app">App</string>
    <string name="settings_studying_title">Studying:</string>
    <string name="settings_card_list_title">Card list:</string>
    <string name="settings_auto_sync_title">Auto-sync with the file</string>
    <string name="settings_auto_sync_desc">If you want to change a file, go to the cards, click on \"Sync\" and choose the auto-sync option.</string>
    <string name="settings_auto_sync_file_name">File name</string>
    <string name="settings_auto_sync_no_file">No file</string>
    <string name="settings_max_lines_title">Max lines</string>
    <string name="settings_max_lines_desc">The maximum lines that may be displayed in the row.</string>
    <string name="settings_edge_bar_show_left_edge_bar">Show left edge bar</string>
    <string name="settings_edge_bar_show_right_edge_bar">Show right edge bar</string>
    <string name="settings_edge_bar_show_learning_status">Show the learning status</string>
</resources>