<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/select_card"
        android:icon="@drawable/ic_baseline_playlist_add_24"
        android:title="@string/cards_list_popup_select_mode_select_card" />
    <item
        android:id="@+id/unselect_card"
        android:icon="@drawable/ic_baseline_deselect_24"
        android:title="@string/cards_list_popup_select_mode_unselect_card" />
    <item
        android:id="@+id/delete_selected_cards"
        android:icon="@drawable/ic_baseline_delete_sweep_24"
        android:title="@string/cards_list_popup_select_mode_delete_selected_cards" />
    <item
        android:id="@+id/paste_card_before"
        android:icon="@drawable/ic_round_content_paste_24"
        android:title="@string/cards_list_popup_select_mode_paste_card_before"
        android:visible="false" />
    <item
        android:id="@+id/paste_card_after"
        android:icon="@drawable/ic_round_content_paste_24"
        android:title="@string/cards_list_popup_select_mode_paste_card_after"
        android:visible="false" />
    <item
        android:id="@+id/paste_card"
        android:icon="@drawable/ic_round_content_paste_24"
        android:title="@string/paste" />
</menu>