<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit_card"
        android:icon="@drawable/ic_round_edit_24"
        android:title="@string/edit" />
    <item
        android:id="@+id/delete_card"
        android:icon="@drawable/ic_round_delete_24"
        android:title="@string/delete" />
    <item
        android:id="@+id/select_card"
        android:icon="@drawable/ic_round_content_cut_24"
        android:title="@string/cards_list_popup_select_card"
        android:visible="false" />
    <item
        android:id="@+id/paste_card"
        android:icon="@drawable/ic_round_content_paste_24"
        android:title="@string/paste"
        android:visible="false" />
    <item
        android:id="@+id/add_card"
        android:icon="@drawable/ic_round_add_card_24"
        android:title="@string/cards_list_popup_add_card_here" />

</menu>