<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_cards"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/new_deck"
        android:icon="@drawable/ic_outline_add_24"
        android:title="@string/decks_list_menu_new_deck"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/new_folder"
        android:icon="@drawable/ic_baseline_create_new_folder_24"
        android:title="@string/decks_list_menu_new_folder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/import_excel"
        android:icon="@drawable/ic_round_file_download_24"
        android:title="@string/decks_list_menu_import_excel"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_csv"
        android:icon="@drawable/ic_round_file_download_24"
        android:title="@string/decks_list_menu_import_csv"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_db"
        android:icon="@drawable/ic_round_file_download_24"
        android:title="@string/decks_list_menu_import_db"
        app:showAsAction="never" />
    <item
        android:id="@+id/discord"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/decks_list_menu_discord"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_settings"
        android:icon="@drawable/discord"
        android:title="@string/decks_list_menu_app_settings"
        app:showAsAction="never" />
</menu>