<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_cards"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/deselect_all_cards"
        android:icon="@drawable/ic_baseline_deselect_24"
        android:title="@string/cards_list_menu_deselect_all_cards"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/delete_selected_cards"
        android:icon="@drawable/ic_baseline_delete_sweep_24"
        android:title="@string/cards_list_menu_delete_cards"
        app:showAsAction="never" />
    <item
        android:id="@+id/new_card"
        android:icon="@drawable/ic_outline_add_24"
        android:title="@string/cards_list_menu_new_card"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/sync_excel"
        android:icon="@drawable/ic_sharp_sync_24"
        android:title="@string/cards_list_menu_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_excel"
        android:icon="@drawable/ic_round_file_upload_24"
        android:title="@string/cards_list_menu_export_excel"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_csv"
        android:icon="@drawable/ic_round_file_upload_24"
        android:title="@string/cards_list_menu_export_csv"
        app:showAsAction="never" />
    <item
        android:id="@+id/deck_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/cards_list_menu_deck_settings"
        app:showAsAction="never" />
</menu>