<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_card"
        android:icon="@drawable/ic_round_edit_24"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/add_card"
        android:icon="@drawable/ic_round_add_card_24"
        android:title="@string/cards_slider_new_card"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_card"
        android:icon="@drawable/ic_round_delete_24"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset_view"
        android:icon="@drawable/ic_round_delete_24"
        android:title="@string/card_study_menu_reset_view"
        app:showAsAction="never" />
</menu>