<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="@+id/deckListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="0dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/decks_list_folder_icon"
        android:padding="12dp"
        android:alpha=".40"
        app:srcCompat="@drawable/ic_baseline_folder_open_24" />


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/moreImageView"
        android:layout_toEndOf="@id/imageView"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"

        android:paddingStart="0dp"
        android:paddingTop="19dp"
        android:paddingEnd="10dp"
        android:scrollHorizontally="true"

        android:singleLine="true"
        android:text="@string/decks_list_create_folder_folder_name"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"  />

    <ImageView
        android:id="@+id/moreImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"

        android:alpha=".40"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"

        android:padding="5dp"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        android:contentDescription="@string/decks_list_popup_folder_desc" />

</RelativeLayout>