<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_cards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".ui.cards.list.file_sync.FileSyncListCardsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/headerTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/idHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingStart="16dp"
                android:paddingTop="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="6dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cards_list_table_header_id" />

            <TextView
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingStart="6dp"
                android:paddingTop="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="6dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cards_list_table_header_term" />

            <TextView
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingStart="6dp"
                android:paddingTop="6dp"
                android:paddingEnd="16dp"
                android:paddingBottom="6dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cards_list_table_header_definition" />

        </TableRow>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/ui_toolbar_below_shadow"
        app:layout_constraintTop_toBottomOf="@+id/header">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/editingLocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_rounded_corner_top"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/cards_list_editing_locked"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>